deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "mydeploy"
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web
    matchExpressions:
      - { key: team, operator: In, values: [team1,team2] }
      - { key: region, operator: In, values: [IN] }
  template:
    metadata:
      name: "mypod"
      labels:
        app: web
        team: team1
        region: IN
    spec:
      containers:
        - name: "myc1"
          image: "vimal13/apache-webserver-php"
