pod.yml
apiVersion: v1
kind: Pod
metadata:
 name: "mypod"
 labels:
   app: web
spec:
 containers:
 - name: "mycontainer"
   image: "vimal13/apache-webserver-php"
